==> nanoframework/nf-interpreter/targets/ESP32/_nanoCLR/Windows.Devices.Gpio/cpu_gpio.cpp <==
#include <nanoCLR_Interop.h>
#include <nanoCLR_Runtime.h>
#include <nanoCLR_Checks.h>
#include <targetHAL.h>
#include <Esp32_DeviceMapping.h>
#include <esp32_idf.h>
#define ESP32_Gpio_MaxPins GPIO_PIN_COUNT // 0 -> 31,  32-39 (high)
#define TOTAL_GPIO_PORTS   ((ESP32_Gpio_MaxPins + 15) / 16)

gpio_input_state *GetInputState(GPIO_PIN pinNumber)
{
    gpio_input_state *ptr = gpioInputList.FirstNode();

    while (ptr->Next() != NULL)
    {
        if (ptr->pinNumber == pinNumber)
        {
            return ptr;
        }

        ptr = ptr->Next();
    }

    return NULL;
}

gpio_input_state *AllocateGpioInputState(GPIO_PIN pinNumber)
{
    gpio_input_state *ptr = GetInputState(pinNumber);

    if (ptr == NULL)
    {
        ptr = (gpio_input_state *)platform_malloc(sizeof(gpio_input_state));
        memset(ptr, 0, sizeof(gpio_input_state));
        ptr->pinNumber = pinNumber;
        gpioInputList.LinkAtBack(ptr);
    }

    return ptr;
}

bool CPU_GPIO_Uninitialize()
{
    NANOCLR_FOREACH_NODE(gpio_input_state, pGpio, gpioInputList)
    {
        UnlinkInputState(pGpio);
    }
    NANOCLR_FOREACH_NODE_END();

    gpio_uninstall_isr_service();

    return true;
}

GpioPinValue CPU_GPIO_GetPinState(GPIO_PIN pin)
{
    return (GpioPinValue)gpio_get_level((gpio_num_t)pin);
}

void CPU_GPIO_SetPinState(GPIO_PIN pinNumber, GpioPinValue pinState)
{
    // need to store pin state
    int port = pinNumber >> 4, bit = 1 << (pinNumber & 0x0F);

    if (pinState == GpioPinValue_High)
    {
        pinStateStore[port] |= bit;
    }
    else
    {
        pinStateStore[port] &= ~bit;
    }

    gpio_set_level((gpio_num_t)pinNumber, (uint32_t)pinState);
}

void CPU_GPIO_TogglePinState(GPIO_PIN pinNumber)
{
    // platform DOES NOT support toggle
    // need to do it "the hard way"

    uint32_t newValue;

    // need to store pin state
    int port = pinNumber >> 4, bit = 1 << (pinNumber & 0x0F);

    if (pinStateStore[port] & bit)
    {
        pinStateStore[port] &= ~bit;
        newValue = 0;
    }
    else
    {
        pinStateStore[port] |= bit;
        newValue = 1;
    }

    gpio_set_level((gpio_num_t)pinNumber, newValue);
}

bool CPU_GPIO_EnableInputPin(
    GPIO_PIN pinNumber,
    uint32_t debounceTimeMilliseconds,
    GPIO_INTERRUPT_SERVICE_ROUTINE pinISR,
    void *isr_Param,
    GPIO_INT_EDGE intEdge,
    GpioPinDriveMode driveMode)
{
    esp_err_t ret;
    gpio_input_state *state;

    // Check Input drive mode
    if (driveMode >= (int)GpioPinDriveMode_Output)
        return false;

    // Set as Input GPIO_INT_EDGE intEdge, GPIO_RESISTOR ResistorState
    if (!CPU_GPIO_SetDriveMode(pinNumber, driveMode))
    {
        return false;
    }

    state = AllocateGpioInputState(pinNumber);

    // Link ISR ptr supplied and not already set up
    // CPU_GPIO_EnableInputPin could be called a 2nd time with changed parameters
    if (pinISR != NULL && (state->isrPtr == NULL))
    {
        ret = gpio_isr_handler_add((gpio_num_t)pinNumber, gpio_isr, (void *)state);
        if (ret != ESP_OK)
        {
            ESP_LOGE(TAG, "Add interrupt to gpio pin failed");
            return false;
        }

        // setup debounce for pin
        // don't care about the return value
        CPU_GPIO_SetPinDebounce(pinNumber, debounceTimeMilliseconds);

        // Map Interrupt edge to ESP32 edge
        // NONE=0, EDGE_LOW=1, EDGE_HIGH=2, EDGE_BOTH=3, LEVEL_HIGH=4, LEVEL_LOW
        uint8_t mapint[6] = {
            GPIO_INTR_DISABLE,
            GPIO_INTR_NEGEDGE,
            GPIO_INTR_POSEDGE,
            GPIO_INTR_ANYEDGE,
            GPIO_INTR_HIGH_LEVEL,
            GPIO_INTR_LOW_LEVEL};
        gpio_set_intr_type((gpio_num_t)pinNumber, (gpio_int_type_t)mapint[intEdge]);

        // store parameters & configs
        state->isrPtr = pinISR;
        state->mode = intEdge;
        state->param = (void *)isr_Param;
        state->debounceMs = debounceTimeMilliseconds;

        switch (intEdge)
        {
            case GPIO_INT_EDGE_LOW:
            case GPIO_INT_LEVEL_LOW:
                state->expected = false;
                break;

            case GPIO_INT_EDGE_HIGH:
            case GPIO_INT_LEVEL_HIGH:
                state->expected = true;
                break;

            case GPIO_INT_EDGE_BOTH:
                state->expected = !CPU_GPIO_GetPinState(pinNumber); // Use not current state
                break;

            default:
                break;
        }
    }
    else if (pinISR == NULL && (state->isrPtr != NULL))
    {
        // there is no managed handler setup anymore
        // remove INT handler

        // remove callback
        gpio_isr_handler_remove((gpio_num_t)state->pinNumber);

        // clear parameters & configs
        state->isrPtr = NULL;
        state->mode = GPIO_INT_NONE;
        state->param = NULL;
        state->debounceMs = 0;
    }

    return true;
}

bool CPU_GPIO_SetDriveMode(GPIO_PIN pinNumber, GpioPinDriveMode driveMode)
{
    // Valid Pin
    if (!GPIO_IS_VALID_GPIO(pinNumber))
    {
        return false;
    }

    // Check Pin is output capable
    if (driveMode >= (int)GpioPinDriveMode_Output && !GPIO_IS_VALID_OUTPUT_GPIO(pinNumber))
    {
        return false;
    }

    gpio_mode_t mode = GPIO_MODE_DISABLE;
    gpio_pullup_t pull_up_en = GPIO_PULLUP_DISABLE;
    gpio_pulldown_t pull_down_en = GPIO_PULLDOWN_DISABLE;
    gpio_int_type_t intr_type = GPIO_INTR_ANYEDGE;

    switch (driveMode)
    {
        case GpioPinDriveMode_Input:
            mode = GPIO_MODE_INPUT;
            break;
        case GpioPinDriveMode_InputPullDown:
            mode = GPIO_MODE_INPUT;
            pull_down_en = GPIO_PULLDOWN_ENABLE;
            break;
        case GpioPinDriveMode_InputPullUp:
            mode = GPIO_MODE_INPUT;
            pull_up_en = GPIO_PULLUP_ENABLE;
            break;
        case GpioPinDriveMode_Output:
            mode = GPIO_MODE_OUTPUT;
            break;
        case GpioPinDriveMode_OutputOpenDrain:
            mode = GPIO_MODE_OUTPUT_OD;
            break;
        case GpioPinDriveMode_OutputOpenDrainPullUp:
            mode = GPIO_MODE_OUTPUT_OD;
            pull_up_en = GPIO_PULLUP_ENABLE;
            break;
        case GpioPinDriveMode_OutputOpenSource:
            mode = GPIO_MODE_OUTPUT_OD;
            break;
        case GpioPinDriveMode_OutputOpenSourcePullDown:
            mode = GPIO_MODE_OUTPUT_OD;
            pull_down_en = GPIO_PULLDOWN_ENABLE;
            break;
    }

    gpio_config_t GPIOConfig;

    GPIOConfig.pin_bit_mask = (1ULL << pinNumber);
    GPIOConfig.mode = mode;
    GPIOConfig.pull_up_en = pull_up_en;
    GPIOConfig.pull_down_en = pull_down_en;
    GPIOConfig.intr_type = intr_type;

    gpio_config(&GPIOConfig);

    return true;
}

bool CPU_GPIO_DriveModeSupported(GPIO_PIN pinNumber, GpioPinDriveMode driveMode)
{
    if (!GPIO_IS_VALID_GPIO(pinNumber))
        return false;

    // Input & Output pins use any valid drivemode.
    // Note: all output pins are also input pins
    if (GPIO_IS_VALID_OUTPUT_GPIO(pinNumber))
    {
        return (driveMode <= GpioPinDriveMode_OutputOpenSourcePullDown);
    }

    // Input only pins only input drive modes
    return (driveMode <= GpioPinDriveMode_InputPullUp);
}
