==> nanoframework/nf-interpreter/targets/FreeRTOS/NXP/nanoCLR/Windows.Devices.Gpio/cpu_gpio.cpp <==
#include "win_dev_gpio_native_target.h"
#include "nf_rt_events_native.h"
#include "timers.h"
#define GPIO_MAX_PINS  		160   // 5 Ports * 32 bits ?
#define GPIO_BITS_PORT		16    // 16 bits per gpio port
#define TOTAL_GPIO_PORTS   ((GPIO_MAX_PINS + (GPIO_BITS_PORT - 1)) / GPIO_BITS_PORT)
#define  GetIoPort(pinNumber)   (pinNumber/GPIO_BITS_PORT)
#define  GetIoBit(pinNumber)   (pinNumber%GPIO_BITS_PORT)
#define  IsValidGpioPin(pinNumber)   (pinNumber < GPIO_MAX_PINS)

gpio_input_state * GetInputState(GPIO_PIN pinNumber )
{
	int port = GetIoPort(pinNumber);
	int bit  = GetIoBit(pinNumber);

	if ( port_array[port] == NULL) return NULL;

	statePortArray * inputStates = port_array[port];
	return *inputStates[bit];
}

gpio_input_state * AllocateGpioInputState(GPIO_PIN pinNumber)
{
	int port = GetIoPort(pinNumber);
	int bit  = GetIoBit(pinNumber);

	if ( port_array[port] == NULL)
	{
		port_array[port] = (statePortArray*)malloc(sizeof(statePortArray));
		if (port_array[port] == NULL ) return NULL;

		memset(port_array[port], 0, sizeof(statePortArray) );
	}

	statePortArray * inputStates = port_array[port];

	gpio_input_state * pGpio = (*inputStates)[bit];
	if (pGpio == NULL)
	{
		pGpio = (gpio_input_state *)malloc(sizeof(gpio_input_state));
		memset(pGpio, 0, sizeof(gpio_input_state));
		pGpio->pinNumber = pinNumber;
		(*inputStates)[bit] = pGpio;
	}
	return pGpio;
}

bool   CPU_GPIO_Uninitialize()
{
	// First remove any active pin states
	for(int pinNumber=0; pinNumber < GPIO_MAX_PINS; pinNumber++)
	{
		DeleteInputState(pinNumber);
	}

	// Remove statePortArray if any
	for(int port=0; port < TOTAL_GPIO_PORTS; port++)
	{
		statePortArray* inputStates = port_array[port];
		if ( inputStates != NULL )
		{
			free(port_array[port]);			// free up inputStates array
			port_array[port] = NULL;
		}
	}

	return true;
}

GpioPinValue CPU_GPIO_GetPinState(GPIO_PIN pinNumber)
{
    return (GpioPinValue)GPIO_PinRead(GPIO_BASE(pinNumber), GPIO_PIN(pinNumber));
}

void CPU_GPIO_SetPinState(GPIO_PIN pinNumber, GpioPinValue PinState)
{
    GPIO_PinWrite(GPIO_BASE(pinNumber), GPIO_PIN(pinNumber), PinState);
}

void CPU_GPIO_TogglePinState(GPIO_PIN pinNumber)
{
	GPIO_PortToggle(GPIO_BASE(pinNumber), 0x1u << GPIO_PIN(pinNumber));
}

bool CPU_GPIO_EnableInputPin(GPIO_PIN pinNumber, int64_t debounceTimeMilliseconds, GPIO_INTERRUPT_SERVICE_ROUTINE Pin_ISR, void* ISR_Param, GPIO_INT_EDGE IntEdge, GpioPinDriveMode driveMode)
{
	gpio_input_state * pGpio;

	// Check if valid pin number 
	if (!IsValidGpioPin(pinNumber)) return false;

	// Check Input drive mode
	if (driveMode >= (int)GpioPinDriveMode_Output)
		return false;

	if (!CPU_GPIO_SetDriveMode(pinNumber, driveMode))
		return false;

	pGpio = AllocateGpioInputState(pinNumber);

	// Map nanoFRamework Interrupt edge to NXP edge
	// NONE=0, EDGE_LOW=1, EDGE_HIGH=2, EDGE_BOTH=3, LEVEL_HIGH=4, LEVEL_LOW
	const gpio_interrupt_mode_t mapint[6] = { kGPIO_NoIntmode, kGPIO_IntFallingEdge, kGPIO_IntRisingEdge, kGPIO_IntRisingOrFallingEdge, kGPIO_IntHighLevel, kGPIO_IntLowLevel };

	// enable interupt mode with correct edge
	gpio_pin_config_t config = {kGPIO_DigitalInput, 0, mapint[IntEdge] };
	GPIO_PinInit(GPIO_BASE(pinNumber), GPIO_PIN(pinNumber), &config);
	
	// Enable GPIO pin interrupt
	IRQn_Type isrNo = (IRQn_Type)(GPIO1_Combined_0_15_IRQn + GetIoPort(pinNumber));
	NVIC_SetPriority(isrNo, 8U);
	EnableIRQ(isrNo);
	GPIO_PortEnableInterrupts(GPIO_BASE(pinNumber), 1U << GetIoBit(pinNumber));
	GPIO_PortClearInterruptFlags(GPIO_BASE(pinNumber), 1U << GetIoBit(pinNumber));

	// Initialise Gpio state structure
	pGpio->isrPtr = Pin_ISR;
	pGpio->mode = IntEdge;
	pGpio->param = (void *)ISR_Param;
	pGpio->debounceMs = (uint32_t)(debounceTimeMilliseconds);

	// Set up expected new value for debounce
	if ( pGpio->debounceMs > 0)
	{
		if (pGpio->debounceTimer == 0)
		{
			// Create timer if it doesn't already exist for this pin
			pGpio->debounceTimer = xTimerCreate("debounce", 100, pdFALSE, (void*)pGpio, Gpio_DebounceHandler);
		}
		switch (IntEdge)
		{
			case GPIO_INT_NONE:
			case GPIO_INT_EDGE_LOW:
			case GPIO_INT_LEVEL_LOW:
				pGpio->expected = false;
				break;

			case GPIO_INT_EDGE_HIGH:
			case GPIO_INT_LEVEL_HIGH:
				pGpio->expected = true;
				break;

			case GPIO_INT_EDGE_BOTH:
				pGpio->expected = !CPU_GPIO_GetPinState(pinNumber);  // Use NOT current state  
				break;
		}
	}

 	return true;
}

bool CPU_GPIO_SetDriveMode(GPIO_PIN pinNumber, GpioPinDriveMode driveMode)
{
	// Check if valid pin number 
	if (!IsValidGpioPin(pinNumber)) return false;

	gpio_pin_direction_t direction;         
	uint32_t pinConfig;

	switch (driveMode)
	{
		case GpioPinDriveMode_Input:
			direction = kGPIO_DigitalInput;
			pinConfig = GPIO_IO;
			break;

		case GpioPinDriveMode_InputPullDown:
			direction = kGPIO_DigitalInput;
			pinConfig = GPIO_IN_PULLDOWN;
			break;

		case GpioPinDriveMode_InputPullUp:
			direction = kGPIO_DigitalInput;
			pinConfig = GPIO_IN_PULLUP;
			break;

		case GpioPinDriveMode_Output:
			direction = kGPIO_DigitalOutput;
			pinConfig = GPIO_IO;
			break;

		case GpioPinDriveMode_OutputOpenDrain:
			direction = kGPIO_DigitalOutput;
			pinConfig = GPIO_OUT_OPENDRAIN;
			break;

		default:
			// all other modes are NOT supported
			return false;
	}

	gpio_pin_config_t config = {direction, 0, kGPIO_NoIntmode};

	GPIO_PinMux(GPIO_PORT(pinNumber), GPIO_PIN(pinNumber), 0x5u);
	GPIO_PinConfig(GPIO_PORT(pinNumber), GPIO_PIN(pinNumber), pinConfig);
	GPIO_PinInit(GPIO_BASE(pinNumber), GPIO_PIN(pinNumber), &config);
        
	return true;
}

bool CPU_GPIO_DriveModeSupported(GPIO_PIN pinNumber, GpioPinDriveMode driveMode)
{
	// Check if valid pin number 
	if (!IsValidGpioPin(pinNumber)) return false;

	bool driveModeSupported = false;

	// check if the requested drive mode is supported
	if ((driveMode == GpioPinDriveMode_Input) ||
		(driveMode == GpioPinDriveMode_InputPullDown) ||
		(driveMode == GpioPinDriveMode_InputPullUp) ||
		(driveMode == GpioPinDriveMode_Output) ||
		(driveMode == GpioPinDriveMode_OutputOpenDrain))
	{
		driveModeSupported = true;
	}

	return driveModeSupported;
}
